Adds a new endpoint for capturing demand
The new endpoint (/cas2/demand) accepts POST requests containing the
body of the demand as JSON.  If the user is of the appropriate role,
then the data is saved and made available at another endpoint
(/cas2/demand/{id}) which will return the entity from the database.

Currently the demand entity is simply a UUID id and an identifier string
but this can easily be extended at the same time as the migration at
src/main/resources/db/migration/all/2024122211495000__add_demands_table.sql
